# pybo

./: .gitignore  LICENSE  README.md  db.sqlite3  pyproject.toml  pyrightconfig.json
common/: urls.py  views.py
config/: settings.py  urls.py
pybo/: admin.py  forms.py  models.py  urls.py  views.py
pybo/migrations/: 0001_initial.py  0002_alter_answer_options_alter_question_options_and_more.py  0003_answer_author.py  0004_answer_voter_question_voter_alter_answer_author_and_more.py
pybo/templatetags/: pybo_filter.py
pybo/views/: answer_views.py  base_views.py  comment_views.py  question_views.py
static/: bootstrap.min.css  global.css  navbar.css  navbar.js
static/pybo/: answer_form.js  question_detail.css  question_detail.js  question_form.js  question_list.js
templates/: base.html  form_errors.html  navbar.html
templates/common/: login.html  signup.html
templates/pybo/: answer_form.html  comment_form.html  question_detail.html  question_form.html  question_list.html
