[tool.poetry]
name = "pybo"
version = "0.1.0"
description = "general forum with python"
authors = ["hhaewon <shinhae40@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-stubs = "^1.16.0"
mypy = "^1.2.0"
django-stubs-ext = "^0.8.0"
markdown = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.10
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"